# korean-bertopic-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  setup.sh
data/sample/: sample_texts.csv
notebooks/: 01_embed.ipynb  02_bertopic.ipynb
pipeline/: __init__.py  config.py  embed.py  gpu.py  metrics.py  tokenize.py
scripts/: 00_dict.py  01_embed.py  02_reduce_cluster.py  02_tune.py  03_bertopic.py  03_model.py
