[project]
name = "korean-bertopic-pipeline"
version = "0.1.0"
description = "BERTopic pipeline for Korean and multilingual text analysis — GPU-ready, config-driven"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bertopic", "topic-modeling", "nlp", "korean", "text-analysis"]

dependencies = [
    "bertopic>=0.16",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# 한국어 형태소 분석
korean = ["kiwipiepy>=0.17"]
# GPU 가속 (PyTorch CUDA — CUDA 13.2 / sm_120 지원)
# 직접 설치 권장: pip install torch --index-url https://download.pytorch.org/whl/cu128
gpu = ["torch>=2.7"]
# Jupyter 노트북
notebook = ["jupyter", "ipywidgets", "matplotlib", "tabulate"]
# 개발
dev = ["pytest", "ruff", "jupyter", "matplotlib", "tabulate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hatchling이 'pipeline' 디렉토리를 패키지로 인식하도록 명시
packages = ["pipeline"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
