[project]
name = "korean-bertopic-pipeline"
version = "0.1.0"
description = "BERTopic pipeline for Korean and multilingual text analysis — GPU-ready, config-driven"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bertopic", "topic-modeling", "nlp", "korean", "text-analysis"]

dependencies = [
    "bertopic>=0.16",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# 한국어 형태소 분석 — Kiwi (in-process, model_type="cong-global"은 0.21+ 필요)
korean = ["kiwipiepy>=0.21"]
# 한국어 형태소 분석 — Bareun (bareun-pipeline: httpx 배치 클라이언트 + DictManager)
# 별도 Bareun 서버 컨테이너 필요. 참조: https://github.com/rubato103/bareun-pipeline
bareun = ["bareun-pipeline>=0.1"]
# LLM 토픽 표현 — vLLM(OpenAI 호환 엔드포인트)로 한국어 토픽 라벨 생성
llm = ["openai>=1.0"]
# PyTorch CUDA (임베딩 GPU 가속 — CUDA 13.2 / sm_120)
# 직접 설치 권장: pip install torch --index-url https://download.pytorch.org/whl/cu128
gpu = ["torch>=2.7"]
# RAPIDS cuML (UMAP/HDBSCAN GPU 가속 — WSL2 필수, conda 설치 권장)
# conda install -c rapidsai cuml=25.04 python=3.12 cuda-version=12.8
# pip (nightly): pip install cuml-cu12 --extra-index-url https://pypi.anaconda.org/rapidsai-wheels-nightly/simple
cuml = []  # pyproject.toml 직접 관리 불가 — 위 conda/pip 명령 사용

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hatchling이 'pipeline' 디렉토리를 패키지로 인식하도록 명시
packages = ["pipeline"]

[tool.uv]
# 개발 의존성은 uv가 단일 관리 (uv sync 시 자동 설치, uv.lock으로 고정)
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
